--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WP-Palvelu Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
-"POT-Creation-Date: 2017-06-27 09:55+0300\n"
-"PO-Revision-Date: 2017-06-27 09:56+0300\n"
-"Last-Translator: Otto Kekäläinen <otto@seravo.fi>\n"
+"POT-Creation-Date: 2017-06-27 15:24+0300\n"
+"PO-Revision-Date: 2017-06-27 15:25+0300\n"
+"Last-Translator: Otto Kekäläinen <otto@seravo.com>\n"
 "Language-Team: Onni Hakala <onni@koodimonni.fi>\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.2\n"
+"X-Generator: Poedit 2.0.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
@@ -18,6 +18,42 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SearchPath-0: .\n"
+
+#: lib/backups-page.php:3 modules/backups.php:30
+msgid "Backups"
+msgstr "Varmuuskopiot"
+
+#: lib/backups-page.php:5
+msgid ""
+"Backups are made automatically every night and preserved for 30 days. The "
+"data can be accessed on the server at <code>/data/backups</code>."
+msgstr ""
+"Varmuuskopiot tehdään automaattisesti joka työ ja säilytetään 30 päivän "
+"ajan. Varmuuskopioita voi selata palvelimella kansiossa <code>/data/backups</"
+"code>."
+
+#: lib/backups-page.php:7
+msgid "Current backups: <code>wp-backup-status</code>"
+msgstr "Nykyiset varmuuskopiot: <code>wp-backup-status</code>"
+
+#: lib/backups-page.php:13
+msgid "Create a new backup"
+msgstr "Ota uusi varmuuskopio"
+
+#: lib/backups-page.php:15
+msgid ""
+"You can also create backups using the command line tool <code>wp-backup</"
+"code>. We recommend getting familiar with the command line option accessible "
+"via SSH so that recovering a backup is not dependant on if WP-admin works or "
+"not."
+msgstr ""
+"Voit tehdä varmuuskopioita komentoriviltä komennolla <code>wp-backup</code>. "
+"Suosittelemme tutustumaan komentorivin käyttöön SSH-yhteyden yli, jotta "
+"varmuuskopion palauttaminen ei olisi riippuvainen WP-adminin toimivuudesta."
+
+#: lib/backups-page.php:18
+msgid "Make a new backup"
+msgstr "Ota uusi varmuuskopio"
 
 #: lib/domains-page.php:5
 msgid "Cheatin&#8217; uh?"
@@ -27,9 +63,33 @@ msgstr ""
 msgid "Sorry, you are not allowed to access domains."
 msgstr "Sinulla ei ole oikeuksia verkkotunnusten hallintaan."
 
+#: lib/domains-page.php:71
+msgid "Domain"
+msgstr "Verkkotunnus"
+
+#: lib/domains-page.php:72
+msgid "Expires"
+msgstr "Erääntyy"
+
+#: lib/domains-page.php:73
+msgid "DNS"
+msgstr "DNS"
+
+#: lib/domains-page.php:74
+msgid "Managed by"
+msgstr "Hallinnoija"
+
 #: lib/domains-page.php:129
 msgid "API call failed. Aborting. The error has been logged."
 msgstr "Rajapintayhteys epäonnistui. Virhe on lisätty lokiin."
+
+#: lib/domains-page.php:193 modules/domains.php:18
+msgid "Domains"
+msgstr "Verkkotunnukset"
+
+#: lib/domains-page.php:197
+msgid "Domains routed to this WordPress site are listed below."
+msgstr "Tähän WordPress-sivustoon kytketyt verkkotunnukset on lueteltu alla."
 
 #: lib/reports-page.php:3 modules/reports.php:26
 msgid "Reports"
@@ -99,7 +159,7 @@ msgid ""
 "With this tool you can run wp search-replace. For your own safety, dry-run "
 "has to be ran before the actual search-replace"
 msgstr ""
-"Tämän työkalun avulla voit ajaa komennon wp search-replace.  Turvallisuuden "
+"Tämän työkalun avulla voit ajaa komennon wp search-replace. Turvallisuuden "
 "vuoksi on ajettava kuiva-ajo (dry-run) ennen kun tehdään muutoksia."
 
 #: lib/search-replace-page.php:7
@@ -165,44 +225,38 @@ msgid "Toggle details"
 msgstr "Näytä lisää"
 
 #: modules/check-default-email.php:29
-#, php-format
 msgid ""
-"Warning: Default email value found. Change it to your own email address <a "
-"href=\"%s/wp-admin/options-general.php\">here</a>"
+"Warning: Default admin email detected in <a href=\"%s/wp-admin/options-"
+"general.php\">site settings</a>. Please update it."
 msgstr ""
-"Varoitus: Oletussähköpostiosoite on käytössä. Vaihda se omaksi "
-"sähköpostiosoitteeksesi <a href=\"%s/wp-admin/options-general.php\">täällä</"
-"a>"
+"Varoitus: <a href=\"%s/wp-admin/options-general.php\">Sivuston asetuksissa</"
+"a> on käytössä oletussähköpostiosoite. Ole hyvä ja vaihda se."
 
-#: modules/check-https.php:29
+#: modules/check-https.php:30
 msgid ""
-"Error with HTTPS protocol. Check <a href=\"https://make.wordpress.org/"
-"support/user-manual/web-publishing/https-for-wordpress/\">here</a> for more "
-"information."
+"HTTPS protocol is not used in <a href=\"%s/wp-admin/options-general.php"
+"\">site settings</a>. Please <a href=\"https://make.wordpress.org/support/"
+"user-manual/web-publishing/https-for-wordpress/\">use https</a>."
 msgstr ""
-"HTTPS-protokolla ei ole käytössä WordPressin asetuksissa. Katso lisää <a "
-"href=\"https://wp-palvelu.fi/blogi/https-kaikille-ja-aina/\">täältä</a>."
-
-#: modules/domains.php:18
-msgid "Domains"
-msgstr "Verkkotunnukset"
+"HTTPS-protokolla ei ole käytössä <a href=\"%s/wp-admin/options-general.php"
+"\">WordPressin asetuksissa</a>. Ole hyvä ja <a href=\"https://wp-palvelu.fi/"
+"blogi/miten-otan-https-kayttoon/\">ota https käyttöön sivustolla</a>."
 
 #: modules/instance-switcher.php:103
 msgid "Now in"
-msgstr ""
+msgstr "Nyt varjossa"
 
 #: modules/instance-switcher.php:134
 msgid "Exit Shadow"
-msgstr ""
+msgstr "Poistu varjosta"
 
 #: modules/instance-switcher.php:143
 msgid "Shadows explained at Seravo.com/docs"
-msgstr ""
+msgstr "Varjot selitettynä ohjeissa Seravo.com/docs"
 
 #: modules/instance-switcher.php:157
-#, php-format
 msgid "Your current shadow instance is %s."
-msgstr ""
+msgstr "Olet nyt varjossa %s."
 
 #: modules/instance-switcher.php:157
 msgid "Exit"
@@ -213,12 +267,10 @@ msgid "Site Error Count"
 msgstr "Sivuston virhemäärä"
 
 #: modules/login-notification.php:115
-#, php-format
 msgid "Welcome %s!"
 msgstr "Tervetuloa, %s!"
 
 #: modules/login-notification.php:116
-#, php-format
 msgid "Previously logged into WordPress by %s on %s (%s)."
 msgstr "Edellinen kirjautuminen WordPressiin käyttäjältä %s – %s (%s)."
 
@@ -227,14 +279,12 @@ msgid "php-error.log"
 msgstr "php-error.log"
 
 #: modules/login-notification.php:124
-#, php-format
 msgid ""
 "You have a total of %s lines in your error log this week. Check %s for "
 "details."
 msgstr "Virhelokiin on tullut tällä viikolla %s riviä. Lisätietoa: %s."
 
 #: modules/login-notification.php:127
-#, php-format
 msgid ""
 "You have at least %s lines in your error log this week. Check %s for details."
 msgstr ""
@@ -254,26 +304,24 @@ msgstr "Hae"
 
 #: modules/logs.php:147
 msgid "Maximum amount of results shown: "
-msgstr "Maksimimäärä näytettäviä lokirivejä:"
+msgstr "Maksimimäärä näytettäviä lokirivejä: "
 
 #: modules/logs.php:164
-#, php-format
 msgid "File %s does not exist or we don't have permissions to read it."
 msgstr ""
-"Tiedostoa %s ei ole olemassa tai käyttöoikeudet eivät riitä lukemaan sitä"
+"Tiedostoa %s ei ole olemassa tai käyttöoikeudet eivät riitä lukemaan sitä."
 
 #: modules/logs.php:167
 msgid "Log empty"
 msgstr "Loki on tyhjä"
 
 #: modules/logs.php:169
-#, php-format
 msgid "Showing %s rows"
 msgstr "Näytetään %s riviä"
 
 #: modules/optimize-images.php:25 modules/optimize-images.php:64
 msgid "Optimize Images"
-msgstr "Kuvien maksimiresoluutio"
+msgstr "Optimoi kuvia"
 
 #: modules/optimize-images.php:34
 msgid "Limit Image Resolution"
@@ -307,18 +355,7 @@ msgstr ""
 "Rajoita helposti sivustosi kuvien kokoa. Pienempi kuvakoko näkyy sivustolla "
 "nopeampana latausaikana ja säästää levytilaa palvelimella."
 
-#: modules/optimize-images.php:102
-#, php-format
-msgid "The minimum width for image optimisation is %s px."
-msgstr "Suurimman sallitun kuvan leveyden tulee olla vähintään %s px."
-
-#: modules/optimize-images.php:111
-#, php-format
-msgid "The minimum height for image optimisation is %s px."
-msgstr "Suurimman sallitun kuvan korkeuden tulee olla vähintään %s px."
-
 #: modules/purge-cache.php:25
-#, php-format
 msgid ""
 "Seravo.com uses front proxies to deliver lightning fast responses to your "
 "visitors. Cached pages will be refreshed every %s. This button is used for "
@@ -360,13 +397,27 @@ msgstr "Lataaminen epäonnistui. Yritä uudelleen."
 msgid "Running rspec tests..."
 msgstr "Testataan sivustoa…"
 
-#~ msgid "Showing %s most recent entries"
-#~ msgstr "Näytetään %s viimeisintä lokiriviä"
+#: modules/updates.php:27
+msgid "Updates"
+msgstr "Päivitykset"
 
-#~ msgid "Seravo Plugin"
-#~ msgstr "WP-palvelu.fi-lisäosa"
+#. Plugin Name of the plugin/theme
+msgid "Seravo Plugin"
+msgstr "WP-palvelu.fi-lisäosa"
 
-#~ msgid ""
-#~ "Enhances WordPress with Seravo.com specific features and integrations."
-#~ msgstr ""
-#~ "Parantaa WordPressin toimintaa lisäämällä WP-palvelu.fi:n ominaisuuksia."
+#. Plugin URI of the plugin/theme
+msgid "https://github.com/Seravo/seravo-plugin"
+msgstr ""
+
+#. Description of the plugin/theme
+msgid "Enhances WordPress with Seravo.com specific features and integrations."
+msgstr ""
+"Parantaa WordPressin toimintaa lisäämällä WP-palvelu.fi:n ominaisuuksia."
+
+#. Author of the plugin/theme
+msgid "Seravo Oy"
+msgstr ""
+
+#. Author URI of the plugin/theme
+msgid "https://seravo.com/"
+msgstr "https://wp-palvelu.fi/"
