--- a/languages/seravo.pot
+++ b/languages/seravo.pot
@@ -1,27 +1,46 @@
-# Copyright (C) 2015-2017 Seravo Oy
-# This file is distributed under the GPL v3.
-#, fuzzy
+# Copyright (C) 2017 Seravo Plugin
+# This file is distributed under the same license as the Seravo Plugin package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Seravo Plugin 1.4.0\n"
+"Project-Id-Version: Seravo Plugin 1.5.4\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
-"POT-Creation-Date: 2017-06-27 09:55+0300\n"
+"POT-Creation-Date: 2017-06-27 12:23:50+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.2\n"
-"X-Poedit-Basepath: ..\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-KeywordsList: __;_e;_x:1,2c;_ex:1,2c;_n:1,2;_nx:1,2,4c;_n_noop:1,2;_nx_noop:1,2,3c;esc_attr__;esc_html__;esc_attr_e;"
-"esc_html_e;esc_attr_x:1,2c;esc_html_x:1,2c\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-Basepath: ../\n"
-"X-Textdomain-Support: yes\n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"X-Poedit-SearchPath-0: .\n"
+"PO-Revision-Date: 2017-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+
+#: lib/backups-page.php:3 modules/backups.php:30
+msgid "Backups"
+msgstr ""
+
+#: lib/backups-page.php:5
+msgid ""
+"Backups are made automatically every night and preserved for 30 days. The "
+"data can be accessed on the server at <code>/data/backups</code>."
+msgstr ""
+
+#: lib/backups-page.php:7
+msgid "Current backups: <code>wp-backup-status</code>"
+msgstr ""
+
+#: lib/backups-page.php:13
+msgid "Create a new backup"
+msgstr ""
+
+#: lib/backups-page.php:15
+msgid ""
+"You can also create backups using the command line tool <code>wp-backup</"
+"code>. We recommend getting familiar with the command line option accessible "
+"via SSH so that recovering a backup is not dependant on if WP-admin works or "
+"not."
+msgstr ""
+
+#: lib/backups-page.php:18
+msgid "Make a new backup"
+msgstr ""
 
 #: lib/domains-page.php:5
 msgid "Cheatin&#8217; uh?"
@@ -31,8 +50,32 @@ msgstr ""
 msgid "Sorry, you are not allowed to access domains."
 msgstr ""
 
+#: lib/domains-page.php:71
+msgid "Domain"
+msgstr ""
+
+#: lib/domains-page.php:72
+msgid "Expires"
+msgstr ""
+
+#: lib/domains-page.php:73
+msgid "DNS"
+msgstr ""
+
+#: lib/domains-page.php:74
+msgid "Managed by"
+msgstr ""
+
 #: lib/domains-page.php:129
 msgid "API call failed. Aborting. The error has been logged."
+msgstr ""
+
+#: lib/domains-page.php:193 modules/domains.php:18
+msgid "Domains"
+msgstr ""
+
+#: lib/domains-page.php:197
+msgid "Domains routed to this WordPress site are listed below."
 msgstr ""
 
 #: lib/reports-page.php:3 modules/reports.php:26
@@ -45,9 +88,11 @@ msgstr ""
 
 #: lib/reports-page.php:7
 msgid ""
-"These monthly reports are generated from the site's HTTP access logs. They show every HTTP request of the site, including "
-"traffic from both humans and bots. Requests blocked at the firewall level (for example during a DDOS attack) are not logged. "
-"Log files can be accessed also directly on the server at <code>/data/slog/html/goaccess-*.html</code>."
+"These monthly reports are generated from the site's HTTP access logs. They "
+"show every HTTP request of the site, including traffic from both humans and "
+"bots. Requests blocked at the firewall level (for example during a DDOS "
+"attack) are not logged. Log files can be accessed also directly on the "
+"server at <code>/data/slog/html/goaccess-*.html</code>."
 msgstr ""
 
 #: lib/reports-page.php:12
@@ -63,7 +108,9 @@ msgid "Report"
 msgstr ""
 
 #: lib/reports-page.php:29
-msgid "No reports found at /data/slog/html/. Reports should be available within a month of the creation of a new site."
+msgid ""
+"No reports found at /data/slog/html/. Reports should be available within a "
+"month of the creation of a new site."
 msgstr ""
 
 #: lib/reports-page.php:63
@@ -87,7 +134,9 @@ msgid "Search-replace tool"
 msgstr ""
 
 #: lib/search-replace-page.php:4
-msgid "With this tool you can run wp search-replace. For your own safety, dry-run has to be ran before the actual search-replace"
+msgid ""
+"With this tool you can run wp search-replace. For your own safety, dry-run "
+"has to be ran before the actual search-replace"
 msgstr ""
 
 #: lib/search-replace-page.php:7
@@ -124,9 +173,12 @@ msgstr ""
 
 #: lib/tests-page.php:5
 msgid ""
-"Here you can test the core functionality of the WordPress installation on your site.\n"
-"        The same effect can be achieved via command line by running <code>wp-test</code>.\n"
-"        For more information, check the <a href=\"https://seravo.com/docs/tests/integration-tests/\">\n"
+"Here you can test the core functionality of the WordPress installation on "
+"your site.\n"
+"        The same effect can be achieved via command line by running <code>wp-"
+"test</code>.\n"
+"        For more information, check the <a href=\"https://seravo.com/docs/"
+"tests/integration-tests/\">\n"
 "            Seravo documentation for developers</a>."
 msgstr ""
 
@@ -143,19 +195,16 @@ msgid "Toggle details"
 msgstr ""
 
 #: modules/check-default-email.php:29
-#, php-format
 msgid ""
-"Warning: Default email value found. Change it to your own email address <a href=\"%s/wp-admin/options-general.php\">here</a>"
+"Warning: Default admin email detected in <a href=\"%s/wp-admin/options-"
+"general.php\">site settings</a>. Please update it."
 msgstr ""
 
-#: modules/check-https.php:29
+#: modules/check-https.php:30
 msgid ""
-"Error with HTTPS protocol. Check <a href=\"https://make.wordpress.org/support/user-manual/web-publishing/https-for-wordpress/"
-"\">here</a> for more information."
-msgstr ""
-
-#: modules/domains.php:18
-msgid "Domains"
+"HTTPS protocol is not used in <a href=\"%s/wp-admin/options-general.php"
+"\">site settings</a>. Please <a href=\"https://make.wordpress.org/support/"
+"user-manual/web-publishing/https-for-wordpress/\">use https</a>."
 msgstr ""
 
 #: modules/instance-switcher.php:103
@@ -171,7 +220,6 @@ msgid "Shadows explained at Seravo.com/docs"
 msgstr ""
 
 #: modules/instance-switcher.php:157
-#, php-format
 msgid "Your current shadow instance is %s."
 msgstr ""
 
@@ -184,12 +232,10 @@ msgid "Site Error Count"
 msgstr ""
 
 #: modules/login-notification.php:115
-#, php-format
 msgid "Welcome %s!"
 msgstr ""
 
 #: modules/login-notification.php:116
-#, php-format
 msgid "Previously logged into WordPress by %s on %s (%s)."
 msgstr ""
 
@@ -198,13 +244,14 @@ msgid "php-error.log"
 msgstr ""
 
 #: modules/login-notification.php:124
-#, php-format
-msgid "You have a total of %s lines in your error log this week. Check %s for details."
+msgid ""
+"You have a total of %s lines in your error log this week. Check %s for "
+"details."
 msgstr ""
 
 #: modules/login-notification.php:127
-#, php-format
-msgid "You have at least %s lines in your error log this week. Check %s for details."
+msgid ""
+"You have at least %s lines in your error log this week. Check %s for details."
 msgstr ""
 
 #: modules/logs.php:63 modules/logs.php:64 modules/logs.php:113
@@ -224,7 +271,6 @@ msgid "Maximum amount of results shown: "
 msgstr ""
 
 #: modules/logs.php:164
-#, php-format
 msgid "File %s does not exist or we don't have permissions to read it."
 msgstr ""
 
@@ -233,7 +279,6 @@ msgid "Log empty"
 msgstr ""
 
 #: modules/logs.php:169
-#, php-format
 msgid "Showing %s rows"
 msgstr ""
 
@@ -271,21 +316,11 @@ msgid ""
 "            significantly improves site performance and saves disk space."
 msgstr ""
 
-#: modules/optimize-images.php:102
-#, php-format
-msgid "The minimum width for image optimisation is %s px."
-msgstr ""
-
-#: modules/optimize-images.php:111
-#, php-format
-msgid "The minimum height for image optimisation is %s px."
-msgstr ""
-
 #: modules/purge-cache.php:25
-#, php-format
 msgid ""
-"Seravo.com uses front proxies to deliver lightning fast responses to your visitors. Cached pages will be refreshed every %s. "
-"This button is used for clearing all cached pages from the frontend proxy immediately."
+"Seravo.com uses front proxies to deliver lightning fast responses to your "
+"visitors. Cached pages will be refreshed every %s. This button is used for "
+"clearing all cached pages from the frontend proxy immediately."
 msgstr ""
 
 #: modules/purge-cache.php:26
@@ -318,4 +353,28 @@ msgstr ""
 
 #: modules/tests.php:41
 msgid "Running rspec tests..."
+msgstr ""
+
+#: modules/updates.php:27
+msgid "Updates"
+msgstr ""
+
+#. Plugin Name of the plugin/theme
+msgid "Seravo Plugin"
+msgstr ""
+
+#. Plugin URI of the plugin/theme
+msgid "https://github.com/Seravo/seravo-plugin"
+msgstr ""
+
+#. Description of the plugin/theme
+msgid "Enhances WordPress with Seravo.com specific features and integrations."
+msgstr ""
+
+#. Author of the plugin/theme
+msgid "Seravo Oy"
+msgstr ""
+
+#. Author URI of the plugin/theme
+msgid "https://seravo.com/"
 msgstr ""
